--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -11,6 +11,15 @@
 
  <!-- Categories : coupons, sales, promotions -->
 
+ <div class="filter-node promotion_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+  <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://live.staticflickr.com/7297/27443174192_885278e512_b.jpg" alt="Gold Box Deals"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2Lw8uy8">Amazon Gold Box and Lightning Deals</a></h2>
+    <p>If you are looking for good Amazon deals and bargains, Today’s Deals is the place to come. </p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Discover More</a></div>
+</div>
+
 <div class="filter-node promotion_box" data-filter='["coupons","Amazon Coupons"]'>
   <div class="node-box inner">
     <h2><a target="_blank" href="https://amzn.to/2NpeR9j">Amazon Coupons</a></h2>
@@ -32,10 +41,10 @@
 
 <div class="filter-node promotion_box" data-filter='["sales","Up to 50% off Great deals on like-new products on Amazon Renewed"]'>
   <div class="node-box inner">
-    <h2><a target="_blank" href="https://amzn.to/2LpJR6e">Up to 50% off | Great deals on like-new products on Amazon Renewed</a></h2>
+    <h2><a target="_blank" href="https://amzn.to/2FJHYxU">Amazon Renewed:  Great deals on like-new products on + Minimum 90-Day Supplier Warranty</a></h2>
     <p>Products on Amazon Renewed have been inspected and tested by qualified suppliers to work and look like new, and come with a minimum 90-day supplier-backed warranty. Get great deals on smartphones, computers, laptops, tablets, home and kitchen appliances, game consoles, office products, and more.</p>
   </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/2LpJR6e">Discover More</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2FJHYxU">Discover More</a></div>
 </div>
 
 <div class="filter-node promotion_box" data-filter='["coupons","Take $25 off your first AmazonFresh order of $100 or more."]'>
