--- a/app/views/promocodes_days/_day_01.html.erb
+++ b/app/views/promocodes_days/_day_01.html.erb
@@ -9,7 +9,7 @@
     <p><a target="_blank" href="https://amzn.to/2xipoYS">True Wireless Earbuds, BassPal Bluetooth 5.0 Headphones TWS in-Ear Mini Headset w/Mic IPX7 Waterproof, Deep Bass 3D Stereo Sound, Portable Charging...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>50DGQ9SB</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -68,7 +68,7 @@
   <div class="inner inner_top">
     <span class="regular"><em>51% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2Np04v6">AUXBLUE Bluetooth Headset Wireless Handsfree Earpiece Headphone Active Noise Cancelling Double Digital MIC Cell Phone Trucker Business Office...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2Np04v6">AUXBLUE Bluetooth Headset Wireless Handsfree Earpiece Headphone Active Noise Cancelling Extra Digital MIC Cell Phone Trucker Business Office...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$18.13</span><span class="ori_price">$36.99</span></address>
       <p><span>Take <strong>51% off at $36.99</strong> with promo code: <strong>51LDYY1Q</strong></span></p>
@@ -171,7 +171,7 @@
     <p><a target="_blank" href="https://amzn.to/2IYipuO">LNC Faux-Wood Bond Pendant Lighting, 1 Light Heavy Duty Pendant Lights, Dimmable and Height Adjustable Small Cage Lighting Fixture</a></p>
     <div class="code_high">
       <address><span class="dis_price">$37.49</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>25% off at $49.99</strong> with promo code: <strong>25G3L9YX</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -233,7 +233,7 @@
     <p><a target="_blank" href="https://amzn.to/2RKRLrX">Selfie Ring Light, Clip-on Ring Light Rechargeable Portable Photography Light, Upgraded Selfie Fill Light with 54 LED Camera Light,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.75</span><span class="ori_price">$14.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>55% off at $14.99</strong> with promo code: <strong>55XA9A56</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 03, 2019 at 11:59 PM PDT</span>
@@ -275,8 +275,8 @@
     <p><a target="_blank" href="https://amzn.to/2XgVjZj">Oral-B Pro 5000 Smartseries Electric Toothbrush With Bluetooth Connectivity, Black Edition (Powered By Braun) </a></p>
     <div class="code_high">
       <address><span class="dis_price">$74.99</span><span class="ori_price">$89.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>16% off at $89.99</strong> with promo code: <strong>15ORALB5000B</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
@@ -298,8 +298,8 @@
     <p><a target="_blank" href="https://amzn.to/2Xghnmz">Glide Oral-B Pro-Health Deep Clean Floss, Mint, Pack of 6</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.48</span><span class="ori_price">$15.48</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>32% off at $15.48</strong> with promo code: <strong>5ORALBFLOSS</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
@@ -361,7 +361,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZWIWOF">Ado Glo Bear Claw Meat Shredder - 2 Pack Sharp Meat Claws for Shredding, Handling & Carving Meat with 2 Pack Oil Brushes (Plastic)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.49</span><span class="ori_price">$9.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>45% off at $9.99</strong> with promo code: <strong>45SZ8LV7</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -443,7 +443,7 @@
     <p><a target="_blank" href="https://amzn.to/2NkHzIn">Manual Coffee Grinder, Hand Ceramic Burr Mill for Precision Brewing, Powder to Coarse Grounds, Brushed Stainless Steel Grinder for Home or Travel</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.99</span><span class="ori_price">$15.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>25% off at $15.99</strong> with promo code: <strong>25OTVLFH</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
