--- a/app/views/promocodes_days/_day_02.html.erb
+++ b/app/views/promocodes_days/_day_02.html.erb
@@ -9,7 +9,7 @@
     <p><a target="_blank" href="https://amzn.to/2XH40LJ">BassPal Portable Bluetooth Speakers, Small True Wireless Stereo (TWS) Speaker with Radio, IPX5 Waterproof, HD Sound & Enhanced Bass, Mini Pocket Size...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$18.14</span><span class="ori_price">$32.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>45% off at $32.99</strong> with promo code: <strong>456PA3JM</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 01, 2019 at 10:00 PM PDT</span>
@@ -71,7 +71,7 @@
     <p><a target="_blank" href="https://amzn.to/2JcMy8F">Portable Charger 10000mAh, Yoobao Ultra Slim Power Bank High-Speed 2 USB Ports with Flashlight External Battery Backup Powerbank Compatible with...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.79</span><span class="ori_price">$23.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>30% off at $23.99</strong> with promo code: <strong>30OKUL5U</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
@@ -113,7 +113,7 @@
     <p><a target="_blank" href="https://amzn.to/2XidihY">StorageWorks Storage Bins, Fabric Storage Baskets, Foldable Closet Organizer Trapezoid Storage Box, Polyester Canvas, Beige, EX-Jumbo, 3-Pack</a></p>
     <div class="code_high">
       <address><span class="dis_price">$21.59</span><span class="ori_price">$35.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $35.99</strong> with promo code: <strong>4048XSRR</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
@@ -155,7 +155,7 @@
     <p><a target="_blank" href="https://amzn.to/2XEy5LQ">iTvanila Air Purifier, Home Air Purifiers for Smokers Odor Pets, 3 in 1 True HEPA Filter, Quiet in Bedroom, Filtration System Cleaner,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$53.58</span><span class="ori_price">$66.98</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>20% off at $66.98</strong> with promo code: <strong>20EVHTD6</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
@@ -217,7 +217,7 @@
     <p><a target="_blank" href="https://amzn.to/2LxItih">CHISANA Wireless Earbuds, Bluetooth Headphones 5.0 [2019 Version] for Stable Connection&Instant Pairing, True 3D Stereo in-Ear Headsets with Battery...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$32.99</span><span class="ori_price">$54.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $54.99</strong> with promo code: <strong>40FJOVEJ</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
@@ -239,7 +239,7 @@
     <p><a target="_blank" href="https://amzn.to/2NoUwAP">proWireless Earbuds CHISANA C1L – Bluetooth Headphones Extreme Subwoofer Bass True Wireless Earbuds w/Dual Microphones | Bluetooth 5.0, IPX7 Waterproof,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$25.99</span><span class="ori_price">$39.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>35% off at $39.99</strong> with promo code: <strong>35U2MH8S</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
@@ -301,7 +301,7 @@
     <p><a target="_blank" href="https://amzn.to/2Lp1UK1">Earpanda Wireless TV Headphones for Seniors,TV Listening Headphones,TV Headphones for Hard of Hearing，Wireless Headphones Connects to Both Digital....</a></p>
     <div class="code_high">
       <address><span class="dis_price">$39.99</span><span class="ori_price">$79.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $79.99</strong> with promo code: <strong>50EARPANDA</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 05, 2019 at 02:00 PM PDT</span>
@@ -343,7 +343,7 @@
     <p><a target="_blank" href="https://amzn.to/2xjaCRH">BESTEK TV Power Strip UL & ETL Listed, 6 Outlet 110V 15A Surge Protector Commercial Power Outlet Power Socket with 2.6-Foot Long Power Cord and Straight...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.93</span><span class="ori_price">$14.88</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $14.88</strong> with promo code: <strong>40R3PYBJ</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -365,7 +365,7 @@
     <p><a target="_blank" href="https://amzn.to/2LrM699">Toiletry Bag Travel Bags for Toiletries Hanging Bathroom Cosmetic Organizer for Women Men Waterproof </a></p>
     <div class="code_high">
       <address><span class="dis_price">$12.99</span><span class="ori_price">$19.98</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>35% off at $19.98</strong> with promo code: <strong>35DUOHRF</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span>
@@ -568,7 +568,7 @@
     <p><a target="_blank" href="https://amzn.to/2xroBop">SEEHONOR Insulated Cooler Backpack Leakproof Soft Cooler Bag Lightweight Backpack Cooler for Lunch Picnic Hiking Camping Beach Park Day Trips, 30 Cans</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $39.99</strong> with promo code: <strong>40MBSRNO</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span>
@@ -590,7 +590,7 @@
     <p><a target="_blank" href="https://amzn.to/2FJIGuK">Premium 3 Inch High Pressure Shower Head -Best Pressure Boosting Fixed Showerhead, Adjustable Metal Swivel Ball Joint, Water Saving Rain Showerhead...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $15.99</strong> with promo code: <strong>401GTWC3</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
