--- a/app/views/promocodes_days/_day_06.html.erb
+++ b/app/views/promocodes_days/_day_06.html.erb
@@ -29,7 +29,7 @@
     <p><a target="_blank" href="https://amzn.to/2IRj2WY">MADETEC Small Handheld Fan, Portable Mini Personal Fan with USB Rechargeable Battery Operated Electric Cooling Fan for Office Room Outdoor Household...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.50</span><span class="ori_price">$12.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $12.99</strong> with promo code: <strong>50XPAGHA</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -71,8 +71,8 @@
     <p><a target="_blank" href="https://amzn.to/2JbSazV">Wireless Charger, Nillkin Qi-Certified Fast Wireless Charging Pad 7.5W[Colorful LED Light] Compatible with iPhone Xs Max/XS/XR/X/8/8 Plus,10W for Samsung...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.99</span><span class="ori_price">$19.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>15% off at $19.99</strong> with promo code: <strong>15UL4E3V</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
@@ -94,7 +94,7 @@
     <p><a target="_blank" href="https://amzn.to/2XAzfI9">Phone Holder for Car FLOVEME Universal Long Neck Dashboard & Windshield with Washable Suction Pad Car Phone Mount for iPhone X XR XS MAX 8 7 6s...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50FLM001</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
@@ -116,7 +116,7 @@
     <p><a target="_blank" href="https://amzn.to/2J9cxxB">Voova Travel Laptop Backpack Multipurpose Anti-Theft Business Backpack Water Resistant College School Computer Bag for Women & Men Fits 15.6 Inch...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$20.50</span><span class="ori_price">$40.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $40.99</strong> with promo code: <strong>50TL1W11</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -158,7 +158,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZTM3a2">Msicyness Sports Duffle Bag 70L Overnight Bag Large Travel Duffel Tote for Men and Women Waterproof Carry on Weekender Bags with Shoe Compartment</a></p>
     <div class="code_high">
       <address><span class="dis_price">$12.38</span><span class="ori_price">$24.75</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $24.75</strong> with promo code: <strong>50HM8WEF</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span>
@@ -300,7 +300,7 @@
     <p><a target="_blank" href="https://amzn.to/2RDKNVQ">NPET True Wireless Earbuds, Bluetooth 5.0 Bass Stereo Sound IPX8 Waterproof Wireless Earphones 80H Playtime with 3000 mAh Charging Case, ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$21.49</span><span class="ori_price">$42.98</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $42.98</strong> with promo code: <strong>50RKLPBZ</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 04, 2019 at 11:59 PM PDT</span>
@@ -322,8 +322,8 @@
     <p><a target="_blank" href="https://amzn.to/2Rzj1tq">Aromatherapy Essential Oil Diffuser 530ml Cool Mist Ultrasonic Fragrance Scent Air Humidifier Wood Grain 18 Hours Aroma Diffuser with...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.49</span><span class="ori_price">$32.98</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $32.98</strong> with promo code: <strong>50CZYNSR</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -345,7 +345,7 @@
     <p><a target="_blank" href="https://amzn.to/2RFmPJR">Blue Light Blocking Glasses for Women and Men, Eye Glasses for Computer and Gaming (Black) </a></p>
     <div class="code_high">
       <address><span class="dis_price">$15.99</span><span class="ori_price">$39.97</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>60% off at $39.97</strong> with promo code: <strong>60BLUEBLOCK</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:59 PM PDT</span>
@@ -467,7 +467,7 @@
     <p><a target="_blank" href="https://amzn.to/2RHcjBY">Professional Salt and Pepper Grinder Set – Premium Stainless Steel Salt and Pepper Shakers with Ceramic Spice Grinder Mill for Adjustable Coarseness ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.70</span><span class="ori_price">$20.87</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>20% off at $20.87</strong> with promo code: <strong>20ISN24B</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span>
@@ -546,7 +546,7 @@
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2xggYS0">MOSSY OAK 32 Oz Stainless Steel Vacuum Insulated Sports Water Bottle - Wide Mouth Leak-Proof Double Wall Bottle with 3 Lids - Black</a></p>
+    <p><a target="_blank" href="https://amzn.to/2xggYS0">MOSSY OAK 32 Oz Stainless Steel Vacuum Insulated Sports Water Bottle - Wide Mouth Leak-Proof Extra Wall Bottle with 3 Lids - Black</a></p>
     <div class="code_high">
       <address><span class="dis_price">$12.99</span><span class="ori_price">$25.99</span></address>
       <p><span>Take <strong>50% off at $25.99</strong> with promo code: <strong>50GKZ6TY</strong></span></p>
