--- a/app/views/promocodes_days/_day_05.html.erb
+++ b/app/views/promocodes_days/_day_05.html.erb
@@ -49,7 +49,7 @@
     <p><a target="_blank" href="https://amzn.to/2XzcgNJ">Bluetooth Sleep Eye Mask Wireless Headphones, TOPOINT Upgrade Sleeping Travel Music Eye Cover Bluetooth Headsets with Microphone Handsfree, Long Play Time,..</a></p>
     <div class="code_high">
       <address><span class="dis_price">$17.49</span><span class="ori_price">$24.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>30% off at $24.99</strong> with promo code: <strong>30111VQ9</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 20, 2019 at 11:59 PM PDT</span>
@@ -71,7 +71,7 @@
     <p><a target="_blank" href="https://amzn.to/2Rz9gM3">GREEN MOUNT 50ft Expandable Garden Hose, Lightweight Flexible Water Hose with 8 Function Spray Nozzle, Ultimate Non Kink Hose Easy to Storage</a></p>
     <div class="code_high">
       <address><span class="dis_price">$20.39</span><span class="ori_price">$33.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $33.99</strong> with promo code: <strong>40H73PQ3</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -150,10 +150,10 @@
   <div class="inner inner_top">
     <span class="regular"><em>20% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2NevvID">SONGMICS Ultra-Lightweight & Portable Hammock Hold up to 660LB Single & Double Parachute Nylon Camping Hammock Swing Bed 118'' x 78'' for Outdoor Backpacking,..</a></p>
+    <p><a target="_blank" href="https://amzn.to/2NevvID">SONGMICS Ultra-Lightweight & Portable Hammock Hold up to 660LB Single & Extra Parachute Nylon Camping Hammock Swing Bed 118'' x 78'' for Outdoor Backpacking,..</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.99</span><span class="ori_price">$14.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>20% off at $14.99</strong> with promo code: <strong>20T2FDB5</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
@@ -195,7 +195,7 @@
     <p><a target="_blank" href="https://amzn.to/2XAJZ9y">MARNUR Fitness Tracker CHR with Heart Rate Monitor 4 Screen Display Modes Waterproof 5 in 1 Smart Bracelet Built-in USB Plug Activity Tracker</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>60% off at $39.99</strong> with promo code: <strong>60UOQQK7</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -258,7 +258,7 @@
     <p><a target="_blank" href="https://amzn.to/2J2WfGE">Fashlight, Mosteck Tactical Flashlight Super Bright LED Flashlight CREE XML2 LED American Chip, Water Resistant Handheld Flashlights High Lumen with ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.49</span><span class="ori_price">$20.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $20.99</strong> with promo code: <strong>50YSA2BT</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -277,10 +277,10 @@
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2X5zxrc">Electric Kettle Temperature Control, CUSIBOX 1.5L Double Wall 100% Stainless Steel Water Kettle with Keep Warm Function, 1500W Fast Boil Cordless Tea Kettle...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2X5zxrc">Electric Kettle Temperature Control, CUSIBOX 1.5L Extra Wall 100% Stainless Steel Water Kettle with Keep Warm Function, 1500W Fast Boil Cordless Tea Kettle...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$20.00</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>60% off at $49.99</strong> with promo code: <strong>60EKETTLE002</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 03, 2019 at 11:59 PM PDT</span>
@@ -362,7 +362,7 @@
     <p><a target="_blank" href="https://amzn.to/2J0IUOU">Bluetooth Speaker Portable Lamp with Alarm Clock, Night Light Speakers with Smart Touch Control – Set The Mood Premium LED Light Bedside Desk Lamp ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$14.44</span><span class="ori_price">$28.88</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $28.88</strong> with promo code: <strong>50WJR5PT</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
@@ -404,7 +404,7 @@
     <p><a target="_blank" href="https://amzn.to/2XbBnqv">OICEPACK Ice Packs,Cool Packs for Cooler,Ice Pack for Lunch Box,Ice Packs for Cooler,Slim Reusable Cooler Ice Pack Long Lasting Freezer Ice Packs,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.79</span><span class="ori_price">$10.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>20% off at $10.99</strong> with promo code: <strong>20LIL4DM</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
@@ -446,7 +446,7 @@
     <p><a target="_blank" href="https://amzn.to/2X5h1PI">Wireless Doorbell Remote Control Bell Chime Ringer Kit Portable Push Button Transmitter & Receiver, Long Range Loud Multi Melodies for ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.49</span><span class="ori_price">$20.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $20.99</strong> with promo code: <strong>50CYR16K</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -468,7 +468,7 @@
     <p><a target="_blank" href="https://amzn.to/2XbRfJN">Knife Set,6-Piece Kitchen Knife Set with Wooden Block Germany High Carbon Stainless Steel Knife Block Set,Chef Knife Set Boxed Knife Set by ROMEKER</a></p>
     <div class="code_high">
       <address><span class="dis_price">$34.38</span><span class="ori_price">$42.98</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>20% off at $42.98</strong> with promo code: <strong>20G9RJLO</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 26, 2019 at 11:59 PM PDT</span>
