--- a/app/views/promocodes_days/_day_07.html.erb
+++ b/app/views/promocodes_days/_day_07.html.erb
@@ -109,7 +109,7 @@
     <p><a target="_blank" href="https://amzn.to/2FDfTIi">Car Phone Holder, Veckle CD Slot Magnetic Phone Car Mount Holder Strong Magnet Phone Holder for Car Universal Cradle for Smartphone iPhone 8 7 6S 6 Plus...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.59</span><span class="ori_price">$10.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $10.99</strong> with promo code: <strong>40Q4TW1H</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
@@ -131,8 +131,8 @@
     <p><a target="_blank" href="https://amzn.to/2Nj2Bag">Waterproof Case, 4 Pack Veckle Floating Waterproof Cell Phone Pouch Universal TPU Clear Water Proof Dry Beach Bag for iPhone X 8 7 6S 6 Plus, Samsung...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.99</span><span class="ori_price">$14.99</span>
-         <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-         <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+         <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+         <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>40% off at $14.99</strong> with promo code: <strong>409FMVC9</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
@@ -214,7 +214,7 @@
     <p><a target="_blank" href="https://amzn.to/2XfrBnf">1Mii Long Range Bluetooth Speaker Wireless Speaker, Portable Speaker with Music Mode&Vocal Mode, 10W 360⁰ Music Speakers, Built-in 8000 mAh Power Bank,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$22.00</span><span class="ori_price">$54.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>60% off at $54.99</strong> with promo code: <strong>60UGOYKI</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -236,7 +236,7 @@
     <p><a target="_blank" href="https://amzn.to/2XhUGyD">Voova Sports Gym Bag with Shoes Compartment 20L Foldable Travel Duffel Totes Bag for Men and Women</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.49</span><span class="ori_price">$20.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $20.99</strong> with promo code: <strong>50B4PTDZ</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -258,7 +258,7 @@
     <p><a target="_blank" href="https://amzn.to/2FFN4uM">BAIYEA Eye Massager with Air Pressure, Music, Vibration and Heat Compression Therapy, Wireless Rechargeable Foldable Temple Massager for Eye Care,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$45.11</span><span class="ori_price">$64.44</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>30% off at $64.44</strong> with promo code: <strong>30YUVS38</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 24, 2019 at 11:59 PM PDT</span>
@@ -320,7 +320,7 @@
     <p><a target="_blank" href="https://amzn.to/2FC6CA8">Kaihang Fast Wireless Charging Pad, 10W / 7.5W Wireless Charger Compatible iPhone XR/XS Max/XS/X/8/8 Plus, 10W Charges Galaxy S9/S9+/Note/S8/S8+ Black</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.20</span><span class="ori_price">$24.00</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>70% off at $24.00</strong> with promo code: <strong>70XDVLBD</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
@@ -442,7 +442,7 @@
     <p><a target="_blank" href="https://amzn.to/2NjCXlT">Voova 28L Travel Business Backpack Laptop Bag Waterproof Multifunctional Unisex Luggage Bag Knapsack Rucksack Canvas Casual Backpack Hiking Bag School...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>50OCHVUG</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -504,7 +504,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZSzZpB">Coffee Mug Warmer with Wireless Charger (2 in 1), AAOBOSI Mug Warmer, Wireless Charging, Constant Temperature (about 122°F/50°C) for Home & Office Use</a></p>
     <div class="code_high">
       <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span>
-        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $39.99</strong> with promo code: <strong>507IUTQB</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
@@ -586,7 +586,7 @@
     <p><a target="_blank" href="https://amzn.to/2IUsc4Z">Hyaluronic Acid Serum, BREYLEE Moisturizing Face Serum Anti Aging Serum for Deeply Enhancing Nourishing Hydrating (40ml, 1.37fl Oz)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.20</span><span class="ori_price">$17.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>60% off at $17.99</strong> with promo code: <strong>60X6BQKT</strong></span></p>
       <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
@@ -648,7 +648,7 @@
     <p><a target="_blank" href="https://amzn.to/2LrNSXS">Hausbell Flashlights, Handheld Flashlights, 7W Mini LED Flashlights, Tactical Flashlights, Zoomable, High Lumen, Water Resistant, 3 Light Modes...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.00</span><span class="ori_price">$9.99</span>
-        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <p><span>Take <strong>50% off at $9.99</strong> with promo code: <strong>50LMLSHC</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
